<resources>
    <string name="app_name">BankodemiaApp</string>
    <string name="token_expired" translatable="false">10m</string>
    <string name="textVArrastrar">Arrastra tu archivo aquí o subelo desde tu ORDENADOR</string>
    <string name="btnSubir">Subir Información</string>
    <string name="back">REGRESAR</string>
    <string name="textViewPermisoCamara">Dale permiso a Bankodemia para utilizar la cámara. Asegúrate de tener buena luz y enfocar bien tu documento de frente.</string>
    <string name="identidad">IDENTIDAD</string>
    <string name="textViewIdentidad1">Ahora, vamos a verificar tu identidad para proteger tu cuenta.</string>
    <string name="textViewIdentidad2">Deberás subir una fotografía de tu INE o pasaporte vigente y tomarte una selfie. Si eres extranjero necesitarás una fotografía de tu documento migratorio (FM3)</string>
    <string name="btnIdentidad">Entendido</string>
    <string name="textViewIdentidad3">Seleccionado el tipo de documento que deseas fotografiar</string>
    <string name="textViewIdentidadIne">INE</string>
    <string name="textViewIdentidadDocumentosMigratorios">Documentos Migratorios</string>
    <string name="textViewIdentidadPasaporte">Pasaporte</string>
    <string name="textViewIdentidad4">Conoce cómo protegemos tus documentos</string>
    <string name="ine">INE</string>
    <string name="tipoDocumentoChange" translatable="false">%s</string>
    <string name="documentoMigratorio">DOCUMENTO MIGRATORIO</string>
    <string name="pasaporte">PASAPORTE</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="textViewContrasena1">Crea una contraseña segura</string>
    <string name="textViewContrasena2">La usarás para entrar a la app y confirmar tus transacciones.</string>
    <string name="textViewContrasena3">Usa al menos 6 caracteres alfanuméricos, no consecutivos ni repetidos.</string>
    <string name="btnContrasena">Crear Contraseña</string>
    <string name="textViewEnviarDatos">Espera un momento, estamos enviando tus datos</string>
    <string name="textViewConfirmacion1">¡Listo! Recibimos tu información. Usualmente tardamos unos minutos en verificar, pero en caso de tener algún problema, nos comunicaremos contigo.</string>
    <string name="textViewGracias">¡GRACIAS POR USAR BANKODEMIA!</string>
    <string name="btnConfirmacionVolverInicio">Volver al Inicio</string>
    <string name="tiet_password_login">Contraseña</string>
    <string name="tietPasswordConfirm">Confirmar tu contraseña</string>
    <string name="adios_a_las_complicaciones">!Adiós a las complicaciones!</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="bankodemia">bankodemia</string>
    <string name="usa_el_diner_a">usa el dinero a</string>
    <string name="manera">Manera</string>
    <string name="escribe_el_correo_y_telefono_con_el_que_n_te_registraste_a_trav_s_de_estos_nte_enciaremos_el_acceso">Escribe el correo y telefono con el que te \nregistraste, a través de estos te \nenviaremos el acceso</string>
    <string name="escribe_tu_correo">Escribe tu correo</string>
    <string name="escribe_tu_contrase_a">Escribe tu contraseña</string>
    <string name="necesitas_ayuda_escribenos_a">¿Necesitas ayuda? Escribenos a</string>
    <string name="bankodemia_com_mx">bankodemia@com.mx</string>
    <string name="campo_vacio">Campo vacio</string>
    <string name="correo_no_valido">correo no valido</string>
    <string name="correo">correo</string>
    <string name="aqu_recibir_s_comprobantes_de_tus_nmovimientos_en_informaci_n_sobre_tu_ncuenta">Aquí recibirás comprobantes de tus \nmovimientos en información sobre tu\ncuenta</string>
    <string name="al_tocar_continuar_aceptas_nuestro">Al tocar continuar aceptas nuestro</string>
    <string name="aviso_de_privacidad">Aviso de privacidad</string>
    <string name="escribe_tu_telefono">ESCRIBE TU TELEFONO</string>
    <string name="lo_usaras_para_inciar_sesi_n">Lo usaras para inciar sesión</string>
    <string name="para_proteger_tu_cuenta_te_enviaremos_un_nc_digo_via_sms">Para proteger tu cuenta, te enviaremos un\ncódigo via SMS.</string>
    <string name="continuar">Continuar</string>
    <string name="ingresa_tus_datos">INGRESA TUS DATOS</string>
    <string name="escribe_tal_como_aparece_en_tu_nidentificacion_oficial_sin_abreviaturas">Escribe tal como aparece en tu\nidentificacion oficial sin abreviaturas</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="apellido_s">Apellido(s)</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="nunca_la_usaremos_sin_tu_n_consentimiento">Nunca la usaremos sin tu\n consentimiento</string>
    <string name="esta_informaci_n_es_necesaria_para_verificar_tu_nidentidad_n">Esta información es necesaria para verificar tu\nidentidad\n</string>
    <string name="flechaatras">flechaAtras</string>
    <string name="usuario">usuario no valido</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">INICIO</string>
    <string name="title_dashboard">TARJETA</string>
    <string name="title_notifications">SERVICIOS</string>
    <string name="dinero_disponible">DINERO DISPONIBLE</string>
    <string name="enviar">Enviar</string>
    <string name="recibir">Recibir</string>
    <string name="tarjeta">TARJETA</string>
    <string name="No_tarjeta">No. de Tarjeta</string>
    <string name="vigencia">Vigencia</string>
    <string name="cvv">CVV</string>
    <string name="servicios">SERVICIOS</string>
    <string name="recarga_celular">Recarga de celular</string>
    <string name="plan_movil">Plan móvil</string>
    <string name="internet_tv_telefono">Internet/TV/Teléfono</string>
    <string name="gas">Gas</string>
    <string name="tarjetas_credito">Tarjetas de crédito</string>
    <string name="tiendas">Tiendas departamentales</string>
    <string name="liverpool">Liverpool, Sears, Palacio de Hierro</string>
    <string name="BBVA">BBVA, Santander, Banorte, Banamex</string>
    <string name="Naturgy">Naturgy y Compañía Mexicana</string>
    <string name="telmex">Telmex, Izzi, TotalPlay</string>
    <string name="ATYT"><![CDATA[AT&T, Telcel, Movistar]]></string>
    <string name="detalle_transaccion">DETALLE DE TRANSACCIÓN</string>
    <string name="fecha_hora">FECHA Y HORA</string>
    <string name="id_transaccion">ID DE TRANSACCIÓN</string>
    <string name="concepto">CONCEPTO</string>
    <string name="cuenta_emisora">CUENTA EMISORA</string>
    <string name="no_cuenta">Número de Cuenta</string>
    <string name="comentario_tarjeta">El numero de Tarjeta tiene que ser de 12 digitos</string>
    <string name="numero_tarjeta">5439 2464 7664 2003</string>
    <string name="letra_tarjeta">CLABE</string>
    <string name="institucion">Institución</string>
    <string name="AgregarNombre">Nombre</string>
    <string name="textoAgregarContancto">Tu contacto fue agregado con éxito</string>
    <string name="Volver_Inicio">Volver a Inicio</string>
    <string name="tu_n_mero_de_celular">Tu número de celular</string>
    <string name="logokodemia">LogoKodemia</string>
    <string name="iv_inicio">iv_incio</string>
    <string name="vigencia_tarjeta">11/26</string>
    <string name="cvv_tarjeta">125</string>
    <string name="gris_items_recycler" translatable="false">#48D2D3D5</string>
    <string name="numero_tarjeta2" translatable="false">5439 2464 7664 2003</string>
    <string name="vigencia_tarjeta2" translatable="false">11/26</string>
    <string name="cvv_tarjeta2" translatable="false">125</string>
    <string name="_0000_2052_14" translatable="false">0000 2052 14</string>
    <string name="dinero_defecto" translatable="false">$0.00</string>
    <string name="enero">enero</string>
    <string name="febrero">febrero</string>
    <string name="marzo">marzo</string>
    <string name="abril">abril</string>
    <string name="mayo">mayo</string>
    <string name="junio">junio</string>
    <string name="julio">julio</string>
    <string name="agosto">agosto</string>
    <string name="septiembre">septiembre</string>
    <string name="octubre">octubre</string>
    <string name="noviembre">noviembre</string>
    <string name="diciembre">diciembre</string>
    <string name="january" translatable="false">January</string>
    <string name="february" translatable="false">February</string>
    <string name="march" translatable="false">March</string>
    <string name="april" translatable="false">April</string>
    <string name="may" translatable="false">May</string>
    <string name="june" translatable="false">June</string>
    <string name="july" translatable="false">July</string>
    <string name="august" translatable="false">August</string>
    <string name="september" translatable="false">September</string>
    <string name="october" translatable="false">October</string>
    <string name="november" translatable="false">November</string>
    <string name="december" translatable="false">December</string>
    <string name="error_trans">Ha ocurrido un error con la lista de transacciones</string>
    <string name="tu_contacto_fue_agregado_con_xito">Tu contacto fue agregado con exito</string>
    <string name="si_internet">Conexión reestablecida</string>
    <string name="no_internet">Se perdió la conexión a internet</string>
    <string name="textodialogo">¿Estas Seguro(o) que quieres realizar esta transacciòn?</string>
    <string name="no_de_tarjeta">No. de Tarjeta</string>
    <string name="nombre">Nombre</string>
    <string name="correo_de_ntoficacion">Correo de Ntoficacion</string>
    <string name="button">Botón</string>
    <string name="title_activity_enviar_transferencia">EnviarTransferencia</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="mensaje_transaccion_exitosa">Tu transacción ha sido finalizada</string>
    <string name="diagonal" translatable="false">/</string>
    <string name="banorte_contacto" translatable="false">BANORTE</string>
    <string name="no_acceso_internet">No se tiene acceso a internet</string>
    <string name="usuario_no_autorizado">Usuario no autorizado</string>
    <string name="ha_ocurrido_un_error">Ha ocurrido un error</string>
    <string name="error_general">Error general</string>
    <string name="minimo_6_caracteres">Se necesitan minimo 6 caracteres para la contraseña</string>
    <string name="contrasenas_diferentes">Las contraseñas son diferentes</string>
    <string name="caracteres_repetido">No se permiten caracteres consecutivos o repetidos</string>
    <string name="el_campo_es_requerido">El campo es requerido</string>
    <string name="numero_telefo_invalido">Número de telefono invalido</string>
    <string name="opciones_cerradas">Opciones cerradas</string>
    <string name="usuarios_no_registrado">Usuario no registrado</string>
    <string name="no_pago_por_el_momento">En este momento no es posible realizar un pago a este contacto</string>
    <string name="favor_revisar_internet">Favor de revisar su conexion a internet</string>
    <string name="deposito_cuenta_propia">Deposito a cuenta propia</string>
    <string name="contactos">CONTACTOS</string>
    <string name="enviar_a">ENVIAR A</string>
    <string name="carlos_contreras_chavez" translatable="false">CARLOS CONTRERAS CHAVEZ</string>
    <string name="_2345_5678_5645_7800" translatable="false">2345 5678 5645 7800</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="monto">Monto</string>
    <string name="concepto_de_pago">CONCEPTO DE PAGO</string>
    <string name="spei_sin_costo">SPEI sin costo</string>
    <string name="hacer_transferencia">Hacer Transferencia</string>
</resources>