<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mx.kodemia.bankodemiaapp.modules.home.view.fragments.InicioFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="mx.kodemia.bankodemiaapp.modules.home.view.fragments.TarjetaFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tarjeta" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="mx.kodemia.bankodemiaapp.modules.home.view.fragments.ServiciosFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_servicios" />
</navigation>