<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verificacionIdentidad.contrasena.Contrasena">

    <ImageView
        android:id="@+id/imageViewContrasena"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bk" />

    <TextView
        android:id="@+id/textViewContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="19dp"
        android:text="@string/contrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewContrasena" />

    <TextView
        android:id="@+id/textViewCrearPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:lineSpacingExtra="5sp"
        android:text="@string/textViewContrasena1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContrasena" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textViewContrasena2"
        app:layout_constraintEnd_toEndOf="@+id/textViewCrearPass"
        app:layout_constraintStart_toStartOf="@+id/textViewCrearPass"
        app:layout_constraintTop_toBottomOf="@+id/textViewCrearPass" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textViewContrasena3"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_password_login"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordConfirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:hint="@string/tietPasswordConfirm"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/btnContrasena"
        app:cornerRadius="10dp"
<<<<<<< HEAD
<<<<<<< HEAD
        app:strokeColor="@color/celeste"
=======
        app:strokeColor="@color/kodemia_blue"
>>>>>>> 637e0df1d59016c67377006be78339c28472b8da
=======
        app:strokeColor="@color/celeste"

>>>>>>> ed5fafecf4b2fa80c6a9d321aff75ce15233d78c
        app:layout_constraintEnd_toEndOf="@+id/tilPasswordConfirm"
        app:layout_constraintStart_toStartOf="@+id/tilPasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordConfirm"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>