<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verificacionIdentidad.pasaporte.Pasaporte">

    <ImageView
        android:id="@+id/imageViewPasaporte"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bk" />

    <TextView
        android:id="@+id/textViewPasaporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="19dp"
        android:text="@string/pasaporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPasaporte" />

    <TextView
        android:id="@+id/textViewPermisoCamaraPasaporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:lineSpacingExtra="5sp"
        android:text="@string/textViewPermisoCamara"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasaporte" />

    <TextView
        android:id="@+id/textViewFotoDPasaporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="51dp"
        android:text="@string/textVArrastrar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPermisoCamaraPasaporte" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPasaporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="31dp"
        android:text="@string/btnSubir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFotoDPasaporte" />

</androidx.constraintlayout.widget.ConstraintLayout>