<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="contentDescription"
    tools:context=".modules.transaction.view.fragments.HacerTransaccionFragment">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icono_kodemia" />

            <ImageView
                android:id="@+id/Img_regreso"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/TV_enviar_dinero"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/TV_enviar_dinero"
                app:srcCompat="@drawable/ic_flecha_return" />

            <TextView
                android:id="@+id/TV_enviar_dinero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/contactos"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/Img_regreso"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icono_kodemia_barra"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppins_400"
                android:text="@string/enviar_a"
                android:textColor="@color/negro"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Img_regreso" />

            <TextView
                android:id="@+id/textViewNombre_Hacer_Transaccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/carlos_contreras_chavez"
                android:textColor="@color/negro"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_500"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textViewId_Hacer_Transaccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_400"
                android:text="@string/_2345_5678_5645_7800"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textViewNombre_Hacer_Transaccion"
                app:layout_constraintTop_toBottomOf="@+id/textViewNombre_Hacer_Transaccion" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_400"
                android:text="@string/diagonal"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/textViewId_Hacer_Transaccion"
                app:layout_constraintTop_toTopOf="@+id/textViewId_Hacer_Transaccion" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banorte_contacto"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_400"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textViewNombre_Hacer_Transaccion" />

            <TextView
                android:id="@+id/tv_necesitasAyuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_400"
                android:text="@string/cantidad"
                android:textColor="@color/negro"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textViewId_Hacer_Transaccion"
                app:layout_constraintTop_toBottomOf="@+id/textViewId_Hacer_Transaccion" />

            <EditText
                android:id="@+id/et_MontoPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/colorOnBackground"
                android:ems="10"
                android:hint="@string/monto"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_necesitasAyuda"
                tools:ignore="TextContrastCheck"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/TV_textopago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/concepto_de_pago"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_400"
                android:textColor="@color/negro"
                app:layout_constraintStart_toStartOf="@+id/tv_necesitasAyuda"
                app:layout_constraintTop_toBottomOf="@+id/TV_spei" />

            <TextView
                android:id="@+id/TV_spei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/spei_sin_costo"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/et_MontoPago"
                app:layout_constraintStart_toStartOf="@+id/et_MontoPago"
                app:layout_constraintTop_toBottomOf="@+id/et_MontoPago"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/et_ConceptoPago"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@color/gris_muy_claro"
                android:fontFamily="@font/poppins_400"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/TV_textopago"
                app:layout_constraintTop_toBottomOf="@+id/TV_textopago"
                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnTransferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:layout_marginBottom="32dp"
                android:text="@string/hacer_transferencia"
                android:textColorHighlight="#8E6E6E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_ConceptoPago"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>